# spanner-mc

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  poetry.toml  pyproject.toml
deploy/cloudbuild/: cloudbuild.deploy.yml
deploy/docker/dev/: Dockerfile
deploy/docker/run/: Dockerfile
deploy/gcp/: cloudbuild.deploy.yml
spannermc/: __init__.py  app.py  asgi.py  cli.py  utils.py
spannermc/domain/: __init__.py  openapi.py  security.py  urls.py
spannermc/domain/accounts/: dependencies.py  dtos.py  models.py  schemas.py  services.py
spannermc/domain/accounts/controllers/: access.py  accounts.py
spannermc/domain/events/: __init__.py  controllers.py  dependencies.py  dtos.py  guards.py  models.py  schemas.py  services.py
spannermc/domain/kv/: __init__.py  controllers.py  dependencies.py  dtos.py  models.py  services.py
spannermc/domain/system/: controllers.py  dtos.py  schemas.py
spannermc/lib/: constants.py  cors.py  crypt.py  dependencies.py  dto.py  exceptions.py  otel.py  repository.py  schema.py  serialization.py  settings.py
spannermc/lib/cloud/: aws.py  gcp.py
spannermc/lib/db/: __init__.py  alembic.ini  base.py  orm.py  utils.py
spannermc/lib/db/migrations/: env.py  script.py.mako
spannermc/lib/db/migrations/versions/: 2023-07-08_users_efef31a13d7b.py  2023-07-10_initial_43a3064b2714.py  2023-07-10_initial_849fdb75f462.py  2023-07-11_init_869d5448b857.py  2023-07-21_init_d5f368f19061.py
spannermc/lib/log/: __init__.py  controller.py  utils.py
spannermc/lib/service/: generic.py  sqlalchemy.py
spannermc/utils/: __init__.py  module_loader.py  text_tools.py
tests/: conftest.py  docker-compose.yml  docker_service.py  load_tester.py
tests/integration/: conftest.py  test_tests.py
tests/performance/: load_tester.py  load_tester_kv.py
tests/unit/: test_cli.py
tests/unit/lib/: test_cache.py  test_crypt.py  test_db.py  test_dependencies.py  test_exceptions.py  test_log.py  test_service.py  test_settings.py
tests/unit/utils/: test_module_loader.py  test_text.py
